[package]
name = "actixtest"
version = "0.1.0"
authors = ["Anderson <andersonfrfilho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
actix-service = "1.0.6"
derive_more = "0.99.11"
dotenv = "0.15.0"
futures = "0.3.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.2"